# OpenEnvHack

./: .gitignore  Blog.md  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
env/email_triage/: env.py
environment/: env.py  models.py
environment/tasks/: easy_task.py  hard_task.py  medium_task.py
server/: app.py
static/: index.html
training/: train_trl.ipynb
